# KajovoSpend

./: .env.example  .gitignore  AGENTS.md  AUDIT_REMEDIATION_CRITICAL_REPORT.md  AUDIT_REMEDIATION_HEADERS.md  AUDIT_REMEDIATION_REPORT.md  DIFF1.patch  DIFF2.patch  DIFF3.patch  DIFF5.patch  Diff.patch  Diff2901.patch  Diff2901_2.patch  KK.fixed.patch  KajovoDIFF_log_20260126_134618.txt  KajovoDIFF_log_20260126_134631.txt  KajovoDIFF_log_20260129_095502.txt  KajovoDIFF_log_20260129_095510.txt  KajovoDIFF_log_20260129_102945.txt  KajovoDIFF_log_20260129_102949.txt  KajovoSpend.spec  KajovoSpend_git_diff.patch  README.md  START.BAT  agents.md  app_gui.py  audit_03_merge_log.txt  audit_04_tests_log.txt  config.example.yaml  config.yaml  didd.diff  kajovospend_shared.py  processing.db  pyproject.toml  requirements.txt  run_gui.py  service_main.py  tmp.ps1  tmp_script.py  zip.ps1  (+1 more)
LOG/: kajovospend.log.2026-03-25  kajovospend.log.2026-03-27  kajovospend_forensic.jsonl
app_gui/: __init__.py  __main__.py  py.py
docs/: AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  FORENSIC_AUDIT_REPORT.md  FORENSIC_DB_SEPARATION.md  README.md  REQUIRED_FIXES_ROADMAP.md  RESET_2026-02-27.md  SECURITY.md  dual_db_forensic_plan.md  dual_db_migration.md  kajovoFRA.md  plan_offline_vat.md  spend_better_openai_audit_plan.md
scripts/: bootstrap_codex_env.sh  compare_fixtures_report.py  download_ocr_models.py  extract_fixtures.py  gui_smoke.py  import_smoke.py  install_service_task.ps1  ui_audit.py  uninstall_service_task.ps1
tests/: __init__.py  test_forensic_logging.py  test_logging_setup_lock.py  (+3 more)
(+125 files in other folders)
