[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kajovospend"
version = "0.1.0"
description = "KájovoSpend – evidence and categorization of expenses"
requires-python = ">=3.11,<3.15"
readme = "README.md"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
